@@ -25,7 +25,7 @@
 
 #include "boxvtkoutputmodule.hh"
 
-#include <ewoms/common/parameters.hh>
+#include <ewoms/common/parametersystem.hh>
 #include <ewoms/common/propertysystem.hh>
 
 namespace Ewoms
