@@ -28,7 +28,7 @@
 #include <dune/common/parametertree.hh>
 
 #include <ewoms/common/propertysystem.hh>
-#include <ewoms/common/parameters.hh>
+#include <ewoms/common/parametersystem.hh>
 #include <ewoms/common/dgfgridcreator.hh>
 
 namespace Ewoms
