@@ -27,7 +27,7 @@
 #include <dune/common/mpihelper.hh>
 
 #include <ewoms/common/propertysystem.hh>
-#include <ewoms/common/parameters.hh>
+#include <ewoms/common/parametersystem.hh>
 
 #include <string>
 
