@@ -34,7 +34,7 @@
 #include <ewoms/linear/solverpreconditioner.hh>
 
 #include <ewoms/common/propertysystem.hh>
-#include <ewoms/common/parameters.hh>
+#include <ewoms/common/parametersystem.hh>
 
 #include <ewoms/istl/solvers.hh>
 #include <dune/istl/preconditioners.hh>
