@@ -27,7 +27,7 @@
 
 #include <ewoms/common/exceptions.hh>
 #include <ewoms/common/propertysystem.hh>
-#include <ewoms/common/parameters.hh>
+#include <ewoms/common/parametersystem.hh>
 
 #include <dune/common/timer.hh>
 #include <dune/common/mpihelper.hh>
